# DT-RS___AI-ML

./: README.md  main.py  pyproject.toml  requirements.txt
Outputs/: Interview-questions.txt  decision_tree_model.pkl  decision_tree_report.txt  random_forest_model.pkl
src/: data_loader.py  evaluate.py  model.py  requirements.txt  utils.py
